Changelog
=========

1.4.2 (unreleased)
------------------

- Nothing changed yet.


1.4.1 (2012-12-21)
------------------

- Fixed release (fixed MANIFEST.in)
  [thomasdesvenain]


1.4 (2012-12-21)
----------------

* Add csv mimetype in example profile.
  [thomasdesvenain]

1.3
---

* Add rtf mimetype with icon in example profile.
  [thomasdesvenain]

1.2
---


1.1
---
* In some Plone 3 setups "GenericSetup.mimetypes Require attributes"
  warning appears, fixed by adding all required attr to a mimetype record. 
  [07.02.2011, mathias.leimgruber]
  
* Added record for MS Project (Icon not included)
  [07.02.2011, mathias.leimgruber]

1.0
---

* Updated MANIFEST.in: added docs directory to release
  [09.08.2010, jbaumann]


1.0a2
-----

* Updated README.txt (rest)
  [12.04.2010, jbaumann]
  

1.0a1
-----

* Added updates for OpenOffice mimetypes (added new icons) and for Office 2007
  mimetypes (using the old office-like icons).
  [12.04.2010, jbaumann]
  
* Assuerd that the GS import/export adapter works on both, plone3 and plone4.
  Plone3's getToolByName returns the Tool, with plone4 it returns the Utility. The Tool and
  the Utility do not have the same interfaces and plone3 crashes when using the old-style
  utility interfaces for adapter registration - so we need to use a zcml:condition.
  [12.04.2010, jbaumann]

* Implemented exporting, added tests
  [09.04.2010, jbaumann]
  
* Improved testing system
  [09.04.2010, jbaumann]
  
* Initial implementation
  [08.04.2010, jbaumann]
  
