@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1</version>
+  <version>2</version>
   <dependencies>
       <dependency>profile-collective.mtrsetup:default</dependency>
   </dependencies>
